# VisionCore

./: .gitignore  ANTIALIASED_CONV_CHANGES.md  BUG_FIX_NO_VALID_SAMPLES.md  CLAUDE.md  IMPORT_CLEANUP_COMPLETE.md  INTEGRATION_CHECKLIST.md  LICENSE  README.md  README_TRAINING_REVIEW.md  REFACTORING_COMPLETE.md  REFACTORING_DONE.md  REFACTORING_SUMMARY.md  TWIN_IMPROVEMENTS.md  bundle_repo_to_text.py  cleanup_duplicates.sh  pyproject.toml  setup_environment.sh  setup_uv_venv.sh  test_antialiased_conv.py  test_optimized_resnet.py  test_zip_simple.py
VisionCore/: covariance.py  dual_window.py  paths.py  stats.py  subspace.py
VisionCore.egg-info/: PKG-INFO
docs/: CRITICAL_FIX_PERSISTENT_WORKERS.md  PERFORMANCE_OPTIMIZATION.md  POLAR_V1_IMPLEMENTATION_SUMMARY.md  POLAR_V1_README.md  README_POLAR_V1.md  VIVIT_IMPLEMENTATION.md  VIVIT_PERFORMANCE_ANALYSIS.md  VIVIT_QUICKSTART.md  VIVIT_ROADMAP.md  hyperparameter_optimization_summary.md  polar_temporal_constants.md  polar_v1_checklist.md  polar_v1_comparison.md  polar_v1_implementation_roadmap.md  polar_v1_integration_roadmap.md  polar_v1_integration_roadmap_v2.md  polar_v1_integration_summary.md  polar_v1_jepa_integration.md  polar_v1_quick_checklist.md  polar_v1_quick_start.md  polar_v1_testing_strategy.md  resnet_convgru_optimizations.md  zero_inflated_poisson_loss.md
eval/: README.md  eval_stack_multidataset.py  eval_stack_utils.py  gaborium_analysis.py  gratings_analysis.py
experiments/: example_zip_training.sh  learn_readouts_frozencore_120.sh  run_all_models.sh  run_all_models_120_base.sh  run_all_models_240.sh  (+20 more)
(+3413 files in other folders)
